apps/teeswim-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teeswim-web
  namespace: teeswim
  labels:
    app: teeswim-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teeswim-web
  template:
    metadata:
      labels:
        app: teeswim-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: teeswim-web
          image: ghcr.io/akaich00/teeswim-web:16cd8ee
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
