apps/teeswim-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teeswim-web
  namespace: teeswim
spec:
  type: NodePort
  selector:
    app: teeswim-web
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30400
